<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent" 
  	android:padding="5px"
  	android:orientation="vertical">
  	 	<TextView 
		android:text="@string/event_name" 
		android:id="@+id/event_name"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_marginTop="5dip" 
		android:layout_marginBottom="5dip" android:textStyle="bold" android:textColor="@color/event_name"></TextView>
  	<TextView 
		android:text="" 
		android:id="@+id/eventN"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_marginTop="5dip"
		android_layout_below="@id/event_name"
		android:layout_marginBottom="10dip"></TextView>
  	<TextView 
		android:text="@string/event_desc" 
		android:id="@+id/event_desc"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_marginTop="5dip" 
		android_layout_below="@id/eventN"
		android:layout_marginBottom="5dip" android:textStyle="bold" android:textColor="@color/event_name"></TextView>
	<TextView 
		android:text="" 
		android:id="@+id/eventDesc"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_marginTop="5dip"
		android_layout_below="@id/event_desc"
		android:layout_marginBottom="10dip"></TextView>
	<TextView 
		android:text="@string/event_date" 
		android:id="@+id/event_date"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_marginTop="5dip" 
		android_layout_below="@id/eventDesc"
		android:layout_marginBottom="5dip" android:textStyle="bold" android:textColor="@color/event_name"></TextView>
	<TextView 
		android:text="" 
		android:id="@+id/eventDate"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android_layout_below="@id/event_date"
		android:layout_marginBottom="10dip"></TextView>
	<TextView 
		android:text="@string/event_place" 
		android:id="@+id/event_place"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_marginTop="5dip" 
		android_layout_below="@id/eventDate"
		android:layout_marginBottom="5dip" android:textStyle="bold" android:textColor="@color/event_name"></TextView>
	<TextView 
		android:text="" 
		android:id="@+id/eventPlace"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android_layout_below="@id/event_place"
		android:layout_marginBottom="10dip"></TextView>
	<Button
	 	android:text="@string/remove_from_favourite" 
	 	android:layout_height="wrap_content"
		android:layout_width="fill_parent" 
		android_layout_below="@id/eventPlace"
		android:id="@+id/removeButton"></Button>
	<Button
	 	android:text="@string/add_to_favourite" 
	 	android:layout_height="wrap_content"
		android:layout_width="fill_parent" 
		android_layout_below="@id/removeButton"
		android:id="@+id/addButton"></Button>
	<Button
	 	android:text="@string/go_to_event" 
	 	android:layout_height="wrap_content"
		android:layout_width="fill_parent" 
		android_layout_above="@id/ad"
		android:id="@+id/goButton"></Button>
	<RelativeLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:admobsdk="http://schemas.android.com/apk/res/"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:orientation="vertical">		
		<com.admob.android.ads.AdView 
			android:id="@+id/ad"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true" 
			admobsdk:backgroundColor="#000000"
			admobsdk:primaryTextColor="#FFFFFF" 
			admobsdk:secondaryTextColor="#CCCCCC"
			admobsdk:testing="true"/>
	</RelativeLayout>
</LinearLayout>
