<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:padding="5px" 
  	android:orientation="vertical">
    <ScrollView 
    	android:id="@+id/scrollView1" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content">
        <LinearLayout 
        	android:layout_width="fill_parent" 
        	android:id="@+id/linearLayout1" 
        	android:layout_height="fill_parent" 
        	android:orientation="vertical">
        	<RelativeLayout android:layout_height="wrap_content" android:id="@+id/relativeLayout1" android:layout_width="fill_parent">
               <ImageView 
                	android:src="@drawable/ic_people_quant"                 	
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content" 
                	android:id="@+id/people_quant_ic" 
                	android:layout_alignParentTop="true">
                </ImageView>
                <TextView 
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content" 
                	style="@style/category_names" 
                	android:text="@string/people_number" 
                	android:id="@+id/textView1" 
                	android:layout_toRightOf="@id/people_quant_ic">                	
                </TextView>
                
            </RelativeLayout>
		    <RatingBar 
		    	android:id="@+id/nopBar" 
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"/>
		    <RelativeLayout android:layout_height="wrap_content" android:id="@+id/relativeLayout1" android:layout_width="fill_parent">
		         <ImageView 
                	android:src="@drawable/ic_drink_cost"                 	
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content" 
                	android:id="@+id/ic_drink_cost" 
                	android:layout_alignParentTop="true">
                </ImageView>
		        <TextView 
		        	android:layout_width="wrap_content" 
		        	android:layout_height="wrap_content" 
		        	style="@style/category_names" 
		        	android:text="@string/drink_cost" 
		        	android:id="@+id/textView2" 
		        	android:layout_toRightOf="@id/ic_drink_cost">   
		        </TextView>
		    </RelativeLayout>
		    <RatingBar 
		    	android:id="@+id/dcBar" 
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"/>
		    <RelativeLayout android:layout_height="wrap_content" android:id="@+id/relativeLayout1" android:layout_width="fill_parent">
		         <ImageView 
                	android:src="@drawable/ic_sex"                 	
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content" 
                	android:id="@+id/ic_sex" 
                	android:layout_alignParentTop="true">
                </ImageView>
		        <TextView 
		        	android:layout_width="wrap_content" 
		        	android:layout_height="wrap_content" 
		        	style="@style/category_names" 
		        	android:text="@string/man_woman" 
		        	android:id="@+id/textView3" 
		        	android:layout_toRightOf="@id/ic_sex">   
		        </TextView>
		    </RelativeLayout>
		    <RatingBar 
		    	android:id="@+id/sexBar" 
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"/>
		    <RelativeLayout android:layout_height="wrap_content" android:id="@+id/relativeLayout1" android:layout_width="fill_parent">
		         <ImageView 
                	android:src="@drawable/ic_siting_places"                 	
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content" 
                	android:id="@+id/ic_siting_places" 
                	android:layout_alignParentTop="true">
                </ImageView>
		        <TextView 
		        	android:layout_width="wrap_content" 
		        	android:layout_height="wrap_content" 
		        	style="@style/category_names" 
		        	android:text="@string/siting_places" 
		        	android:id="@+id/textView4" 
		        	android:layout_toRightOf="@id/ic_siting_places">   
		        </TextView>
		    </RelativeLayout>
		    <RatingBar   
		    	android:id="@+id/fspBar" 
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"/>
		    <RelativeLayout android:layout_height="wrap_content" android:id="@+id/relativeLayout1" android:layout_width="fill_parent">
		    	 <ImageView 
                	android:src="@drawable/ic_entrance_fee"                 	
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content" 
                	android:id="@+id/ic_entrance_fee" 
                	android:layout_alignParentTop="true">
                </ImageView>
		    	 <TextView 
		    		style="@style/category_names"
		    		android:text="@string/entrance_fee"
		    		android:id="@+id/textView5" 
		    		android:layout_width="wrap_content" 
		    		android:layout_height="wrap_content"
					android:layout_toRightOf="@id/ic_entrance_fee">   
		    	</TextView>
		    </RelativeLayout>
		    <RatingBar 
		    	android:id="@+id/efBar" 
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"/>
		     <RelativeLayout android:layout_height="wrap_content" android:id="@+id/relativeLayout1" android:layout_width="fill_parent">
		    	<ImageView 
                	android:src="@drawable/ic_smoking_places"                 	
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content" 
                	android:id="@+id/ic_smoking_places" 
                	android:layout_alignParentTop="true">
                </ImageView>
		    	<TextView 
		    		style="@style/category_names"
		    		android:text="@string/smoking_places"
		    		android:id="@+id/textView6" 
		    		android:layout_width="wrap_content" 
		    		android:layout_height="wrap_content"
					android:layout_toRightOf="@id/ic_smoking_places">   
		    	</TextView>
		    </RelativeLayout>
		    <RatingBar 
		    	android:id="@+id/smkBar" 
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"/>
		    <Button 
		    	android:layout_width="fill_parent" 
		    	android:id="@+id/voteButton" 
		    	android:text="Vote" 
		    	android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
